@startuml webshop
entity product{
  * id: int <<PK>>
  --
  * category: varchar(45)
  * name: varchar(80)
  * price: int
  * discount_id: int
  desc: mediumtext
  attribute: JSON
}
entity discount{
  * id: int <<PK>>
  --
  * percentage: int
}
entity order_items{
  * id: int <<PK>>
  --
  * product_id: int
  * order_id: int
}
entity order_details{
  * id: int <<PK>>
  --
  * user_id: int
  * total: int
  * payment_id: int
}
entity cart_item{
  * id: int <<PK>>
  --
  * session_id: int
  * product_id: int
  * quantity: int
  * created_at: timestamp(1)
}
entity shopping_session{
  * id: int <<PK>>
  --
  * user_id: int
  * total: int
  * created_at: timestamp(1)
}
entity user{
  * id: int <<PK>>
  --
  * username: varchar(20)
  * password: varchar(20)
  * first_name: varchar(20)
  * last_name: varchar(20)
  city: varchar(20)
  zip_code: varchar(10)
  address: varchar(45)
  phone_number: varchar(15)
}



product }|-- discount
product ||--|| cart_item
product ||--|| order_items
order_items }|-- order_details
order_details ||--|| user
user ||--|| shopping_session
cart_item }|-- shopping_session
@enduml